r132
Improved: Small decompression speed boost (+4%)
Improved: Performance on ARMv6
Makefile: Generate intermediate object files (*.o) for faster compilation on low power systems

r131
New    : Dos/DJGPP target, thanks to Louis Santillan (#114)
Added  : Example using lz4frame library, by Zbigniew Jędrzejewski-Szmek (#118)
Changed: xxhash symbols are modified (namespace emulation) within liblz4

r130:
Fixed  : incompatibility sparse mode vs console, reported by Yongwoon Cho (#105)
Fixed  : LZ4IO exits too early when frame crc not present, reported by Yongwoon Cho (#106)
Fixed  : incompatibility sparse mode vs append mode, reported by Takayuki Matsuoka (#110)
Performance fix : big compression speed boost for clang (+30%)
New    : cross-version test, by Takayuki Matsuoka

r129:
Added  : LZ4_compress_fast(), LZ4_compress_fast_continue()
Added  : LZ4_compress_destSize()
Changed: New lz4 and lz4hc compression API. Previous function prototypes still supported.
Changed: Sparse file support enabled by default
New    : LZ4 CLI improved performance compressing/decompressing multiple files (#86, kind contribution from Kyle J. Harper & Takayuki Matsuoka)
Fixed  : GCC 4.9+ optimization bug - Reported by Markus Trippelsdorf, Greg Slazinski & Evan Nemerson
Changed: Enums converted to LZ4F_ namespace convention - by Takayuki Matsuoka
Added  : AppVeyor CI environment, for Visual tests - Suggested by Takayuki Matsuoka
Modified:Obsolete functions generate warnings - Suggested by Evan Nemerson, contributed by Takayuki Matsuoka
Fixed  : Bug #75 (unfinished stream), reported by Yongwoon Cho
Updated: Documentation converted to MarkDown format

r128:
New    : lz4cli sparse file support (Requested by Neil Wilson, and contributed by Takayuki Matsuoka)
New    : command -m, to compress multiple files in a single command (suggested by Kyle J. Harper)
Fixed  : Restored lz4hc compression ratio (slightly lower since r124)
New    : lz4 cli supports long commands (suggested by Takayuki Matsuoka)